--- a/src/app/features/profile/pages/profile/profile.component.html
+++ b/src/app/features/profile/pages/profile/profile.component.html
@@ -15,7 +15,7 @@
           severity="secondary"
           (click)="resetUser()"
         ></p-button>
-        <p-button label="Salvar" (click)="saveUser()"></p-button>
+        <p-button label="Salvar" (click)="handleclick()"></p-button>
       </div>
     </div>
 
