--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -7,6 +7,7 @@
   </div>
 
   <form
+    [formGroup]="registerForm"
     class="flex flex-col gap-2"
     ngNativeValidate
     (submit)="handleSubmit($event)"
@@ -17,6 +18,7 @@
         required
         type="email"
         name="email"
+        formControlName="email"
         placeholder="Email"
         class="p-inputtext-sm"
         [disabled]="isSubmitting"
@@ -29,6 +31,7 @@
         required
         name="password"
         type="password"
+        formControlName="password"
         placeholder="Senha"
         class="p-inputtext-sm"
         [disabled]="isSubmitting"
