feat: add @auth0/angular-jwt dependency and update UI styles for authentication pages

--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -19,7 +19,7 @@
         type="email"
         name="email"
         placeholder="Email"
-        class="p-inputtext-sm"
+        class="p-inputtext-sm hover:!border-emerald-500 focus-within:!border-emerald-500"
         [disabled]="isSubmitting"
       />
     </div>
@@ -32,7 +32,7 @@
         type="password"
         formControlName="password"
         placeholder="Senha"
-        class="p-inputtext-sm"
+        class="p-inputtext-sm hover:!border-emerald-500 focus-within:!border-emerald-500"
         [disabled]="isSubmitting"
       />
     </div>
