--- a/src/app/features/auth/pages/reset-password/reset-password.component.html
+++ b/src/app/features/auth/pages/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <main class="space-y-6">
   <div class="space-y-2">
-    <h1 class="text-2xl font-semibold tracking-tight">Redefinir senha</h1>
-    <p class="text-sm text-muted-foreground">
+    <h1 class="text-2xl font-semibold tracking-tight text-white">Redefinir senha</h1>
+    <p class="text-sm text-slate-300">
       Insira seu email abaixo para enviarmos seu código de redefinição
     </p>
   </div>
@@ -18,7 +18,7 @@
         type="email"
         name="email"
         placeholder="Email"
-        class="p-inputtext-sm"
+        class="p-inputtext-sm hover:!border-emerald-500 focus-within:!border-emerald-500"
         [disabled]="isSubmitting"
       />
     </div>
@@ -29,13 +29,15 @@
       type="submit"
       [disabled]="isSubmitting"
       size="small"
+      label="Enviar"
+      class="!bg-emerald-500 hover:!bg-emerald-600 !border-emerald-500 hover:!border-emerald-600"
     >
-      Enviar
+
     </button>
   </form>
 
-  <p class="text-sm text-muted-foreground">
+  <p class="text-sm text-slate-300 ">
     Voltar para o login?
-    <a routerLink="/auth/login" class="font-medium underline">Login</a>
+    <a routerLink="/auth/login" class="font-medium underline hover:text-slate-200">Login</a>
   </p>
 </main>
