refactor: resolving not found value login/register form

--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -1,6 +1,8 @@
 <main class="space-y-6">
   <div class="space-y-2">
-    <h1 class="text-2xl font-semibold tracking-tight text-white">Criar uma conta</h1>
+    <h1 class="text-2xl font-semibold tracking-tight text-white">
+      Criar uma conta
+    </h1>
     <p class="text-sm text-slate-300">
       Insira seu email abaixo para criar uma conta
     </p>
@@ -46,12 +48,15 @@
       size="small"
       label="Criar conta"
       class="!bg-emerald-500 hover:!bg-emerald-600 !border-emerald-500 hover:!border-emerald-600"
-    >
-    </button>
+    ></button>
   </form>
 
   <p class="text-sm text-slate-300">
     Já tem uma conta?
-    <a routerLink="/auth/login" class="font-medium underline hover:text-slate-200">Entrar</a>
+    <a
+      routerLink="/auth/login"
+      class="font-medium underline hover:text-slate-200"
+      >Entrar</a
+    >
   </p>
 </main>
