--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -1,6 +1,8 @@
 <main class="space-y-6">
   <div class="space-y-2">
-    <h1 class="text-2xl font-semibold tracking-tight text-white">Bem vindo de volta</h1>
+    <h1 class="text-2xl font-semibold tracking-tight text-white">
+      Bem vindo de volta
+    </h1>
     <p class="text-sm text-slate-300">
       Insira seu email e senha para acessar sua conta
     </p>
@@ -18,6 +20,7 @@
         required
         type="email"
         name="email"
+        formControlName="email"
         placeholder="Email"
         class="p-inputtext-sm hover:!border-emerald-500 focus-within:!border-emerald-500"
         [disabled]="isSubmitting"
@@ -45,9 +48,7 @@
       size="small"
       label="Entrar"
       class="!bg-emerald-500 hover:!bg-emerald-600 !border-emerald-500 hover:!border-emerald-600"
-    >
-
-    </button>
+    ></button>
   </form>
 
   <div class="flex flex-col gap-1">
@@ -58,9 +59,13 @@
       Esqueceu sua senha?
     </a>
 
-    <p class="text-sm text-slate-300 ">
+    <p class="text-sm text-slate-300">
       Ainda não tem uma conta?
-      <a routerLink="/auth/register" class="font-medium underline hover:text-slate-200">Criar</a>
+      <a
+        routerLink="/auth/register"
+        class="font-medium underline hover:text-slate-200"
+        >Criar</a
+      >
     </p>
   </div>
 </main>
