--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,9 +1,10 @@
-<aside [className]="sidebarWrapperClasses">
-  <div class="mt-8">
+<aside [className]="sidebarWrapperClasses" class="bg-red-500">
+  <div class="mt-8 ">
     <img src="/assets/logo.png" class="w-32 h-32" />
+    <h1 class="flex justify-center text-3xl font-bold font-Orbitron text-emerald-600">UNIFIT</h1>
   </div>
 
-  <nav class="flex-1 w-full">
+  <nav class="flex-1 w-full ">
     <ul class="flex flex-col w-full gap-2">
       <li>
         <a
@@ -11,8 +12,7 @@
           class="flex items-center gap-4 px-4 py-2 text-sm transition-colors duration-200 border rounded-md cursor-pointer hover:bg-gray-100"
         >
           <i
-            class="flex items-center justify-center text-lg pi pi-th-large"
-          ></i>
+            class="flex items-center justify-center text-lg pi pi-th-large"></i>
           Home
         </a>
       </li>
