--- a/src/app/features/workouts/pages/workouts/workouts.component.html
+++ b/src/app/features/workouts/pages/workouts/workouts.component.html
@@ -1,4 +1,4 @@
-<main>
+<main class="">
   <div class="flex flex-wrap items-center justify-between gap-2 mb-6">
     <app-title title="Seus Treinos" />
     <p-button
