--- a/src/app/shared/components/app-layout/app-layout.component.html
+++ b/src/app/shared/components/app-layout/app-layout.component.html
@@ -9,7 +9,7 @@
   <app-sidebar />
 
   <main
-    class="flex-1 p-8 bg-gray-500 w-full sm:max-w-[calc(100vw-320px)] overflow-y-auto"
+    class="flex-1 w-full"
   >
     <router-outlet></router-outlet>
   </main>
