--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,15 +4,16 @@
     <h1 class="flex justify-center text-3xl font-bold font-Orbitron text-emerald-600">UNIFIT</h1>
   </div>
 
-  <nav class="flex-1 w-full ">
+  <nav class="flex-1 w-full">
     <ul class="flex flex-col w-full gap-2">
       <li>
         <a
           routerLink="/app"
+          routerLinkActive="bg-emerald-100 text-emerald-600 border-emerald-600"
+          [routerLinkActiveOptions]="{ exact: true }"
           class="flex items-center gap-4 px-4 py-2 text-sm transition-colors duration-200 border rounded-md cursor-pointer hover:bg-gray-100"
         >
-          <i
-            class="flex items-center justify-center text-lg pi pi-th-large"></i>
+          <i class="flex items-center justify-center text-lg pi pi-th-large"></i>
           Home
         </a>
       </li>
@@ -20,6 +21,7 @@
       <li>
         <a
           routerLink="/app/workouts"
+          routerLinkActive="bg-emerald-100 text-emerald-600 border-emerald-600"
           class="flex items-center gap-4 px-4 py-2 text-sm transition-colors duration-200 border rounded-md cursor-pointer hover:bg-gray-100"
         >
           <i class="flex items-center justify-center text-lg pi pi-list"></i>
@@ -30,6 +32,7 @@
       <li>
         <a
           routerLink="/app/profile"
+          routerLinkActive="bg-emerald-100 text-emerald-600 border-emerald-600"
           class="flex items-center gap-4 px-4 py-2 text-sm transition-colors duration-200 border rounded-md cursor-pointer hover:bg-gray-100"
         >
           <i class="flex items-center justify-center text-lg pi pi-user"></i>
@@ -38,6 +41,7 @@
       </li>
     </ul>
   </nav>
+
 
   <a
     routerLink="/app/login"
