--- a/src/app/features/profile/pages/profile/profile.component.html
+++ b/src/app/features/profile/pages/profile/profile.component.html
@@ -1,80 +1,139 @@
-<main class="flex items-center justify-center w-screen h-screen bg-center bg-cover bg-profile-bg bg-opacity-40">
+<main
+  class="flex items-center justify-center w-screen h-screen bg-center bg-cover bg-profile-bg bg-opacity-40"
+>
   <div class="w-full max-w-3xl p-6 bg-white rounded-lg shadow-lg opacity-90">
     <app-title title="Perfil" />
     <div class="flex flex-col w-full mt-6">
       <div
-        class="flex flex-col items-center justify-between gap-4 pb-5 border-b border-zinc-200 lg:flex-row lg:items-center dark:border-zinc-700">
+        class="flex flex-col items-center justify-between gap-4 pb-5 border-b border-zinc-200 lg:flex-row lg:items-center dark:border-zinc-700"
+      >
         <div class="space-y-1 text-center">
           <h1 class="text-lg text-emerald-600 dark:text-zinc-400">
             Edite e atualize seus dados pessoais aqui
           </h1>
         </div>
         <div class="flex items-center gap-2">
-
           <button
             pButton
             label="Editar"
             icon="pi pi-pencil"
             (click)="showDialog()"
             class="!text-white !bg-emerald-500 hover:!bg-emerald-600 !border-emerald-500 hover:!border-emerald-600 !opacity-100"
+          ></button>
+
+          <p-dialog
+            header="Editar Perfil"
+            [modal]="true"
+            [(visible)]="visible"
+            [style]="{ width: '30rem' }"
+            draggable="false"
           >
-          </button>
-
-
-          <p-dialog header="Editar Perfil" [modal]="true" [(visible)]="visible" [style]="{ width: '30rem' }"
-            draggable="false">
-
-
             <div class="space-y-4">
               <div class="flex items-center">
-                <label for="name" class="flex justify-center w-full font-semibold">Nome:</label>
-                <input type="text" pInputText id="name" autocomplete="off" [(ngModel)]="editUser.name" class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"/>
+                <label
+                  for="name"
+                  class="flex justify-center w-full font-semibold"
+                  >Nome:</label
+                >
+                <input
+                  type="text"
+                  pInputText
+                  id="name"
+                  autocomplete="off"
+                  [(ngModel)]="editUser.name"
+                  class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"
+                />
               </div>
 
               <div class="flex items-center">
-                <label for="email" class="flex justify-center w-full font-semibold">E-mail:</label>
-                <input type="text" id="email" pInputText autocomplete="off" [(ngModel)]="editUser.email" class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"/>
+                <label
+                  for="email"
+                  class="flex justify-center w-full font-semibold"
+                  >E-mail:</label
+                >
+                <input
+                  type="text"
+                  id="email"
+                  pInputText
+                  autocomplete="off"
+                  [(ngModel)]="editUser.email"
+                  class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"
+                />
               </div>
 
               <div class="flex items-center">
-                <label for="height" class="flex justify-center w-full font-semibold">Altura:</label>
-                <input type="text" id="height" pInputText autocomplete="off" [(ngModel)]="editUser.height" class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"/>
+                <label
+                  for="height"
+                  class="flex justify-center w-full font-semibold"
+                  >Altura:</label
+                >
+                <input
+                  type="text"
+                  id="height"
+                  pInputText
+                  autocomplete="off"
+                  [(ngModel)]="editUser.height"
+                  class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"
+                />
               </div>
 
               <div class="flex items-center">
-                <label for="weight" class="flex justify-center w-full font-semibold">Peso:</label>
-                <input type="text" id="weight" pInputText autocomplete="off" [(ngModel)]="editUser.weight" class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"/>
+                <label
+                  for="weight"
+                  class="flex justify-center w-full font-semibold"
+                  >Peso:</label
+                >
+                <input
+                  type="number"
+                  id="weight"
+                  autocomplete="off"
+                  [(ngModel)]="editUser.weight.value"
+                  class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"
+                />
               </div>
 
               <div class="flex items-center">
-                <label for="age" class="flex justify-center w-full font-semibold">Idade:</label>
-                <input type="text" id="age" pInputText autocomplete="off" [(ngModel)]="editUser.age" class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"/>
+                <label
+                  for="age"
+                  class="flex justify-center w-full font-semibold"
+                  >Idade:</label
+                >
+                <input
+                  type="text"
+                  id="age"
+                  pInputText
+                  autocomplete="off"
+                  [(ngModel)]="editUser.age"
+                  class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"
+                />
               </div>
-
-
             </div>
 
             <div class="flex justify-end gap-2 mt-4">
-              <p-button label="Cancelar" severity="secondary" (click)="resetUser()"></p-button>
+              <p-button
+                label="Cancelar"
+                severity="secondary"
+                (click)="resetUser()"
+              ></p-button>
               <button
                 pButton
                 label="Salvar"
                 (click)="handleclick()"
                 class="!text-white !bg-emerald-500 hover:!bg-emerald-600 !border-emerald-500 hover:!border-emerald-600 !bg-opacity-100"
-              >
-              </button>
-
+              ></button>
             </div>
           </p-dialog>
-
         </div>
       </div>
 
-
-      <div id="settings" class="flex flex-col items-center w-full gap-5 mt-6 divide-y">
-
+      <div
+        id="settings"
+        class="flex flex-col items-center w-full gap-5 mt-6 divide-y"
+      >
         <div class="flex flex-col w-full max-w-md gap-2">
-          <p-inputGroup class="[&_.p-inputgroup]:flex [&_.p-inputgroup]:gap-3 [&_.p-inputgroup]:justify-center">
+          <p-inputGroup
+            class="[&_.p-inputgroup]:flex [&_.p-inputgroup]:gap-3 [&_.p-inputgroup]:justify-center"
+          >
             <p-inputGroupAddon class="w-32">
               <p>
                 <i class="pi pi-user"></i>
@@ -82,11 +141,19 @@
               </p>
             </p-inputGroupAddon>
             <div class="flex flex-col gap-2 lg:flex-row">
-              <input disabled class="w-full p-2 text-gray-500 disabled:bg-gray-100" pInputText placeholder="Nome" [(ngModel)]="editUser.name"/>
+              <input
+                disabled
+                class="w-full p-2 text-gray-500 disabled:bg-gray-100"
+                pInputText
+                placeholder="Nome"
+                [(ngModel)]="editUser.name"
+              />
             </div>
           </p-inputGroup>
 
-          <p-inputGroup class="[&_.p-inputgroup]:flex [&_.p-inputgroup]:gap-3 [&_.p-inputgroup]:justify-center">
+          <p-inputGroup
+            class="[&_.p-inputgroup]:flex [&_.p-inputgroup]:gap-3 [&_.p-inputgroup]:justify-center"
+          >
             <p-inputGroupAddon class="w-32">
               <p>
                 <i class="pi pi-envelope"></i>
@@ -94,14 +161,21 @@
               </p>
             </p-inputGroupAddon>
             <div class="flex flex-col gap-2 lg:flex-row">
-              <input disabled class="w-full p-2 text-gray-500 disabled:bg-gray-100" pInputText placeholder="Email" [(ngModel)]="editUser.email"/>
+              <input
+                disabled
+                class="w-full p-2 text-gray-500 disabled:bg-gray-100"
+                pInputText
+                placeholder="Email"
+                [(ngModel)]="editUser.email"
+              />
             </div>
-
           </p-inputGroup>
         </div>
 
         <div class="flex flex-col w-full max-w-md gap-3 pt-5">
-          <p-inputGroup class="[&_.p-inputgroup]:flex [&_.p-inputgroup]:gap-3 [&_.p-inputgroup]:justify-center">
+          <p-inputGroup
+            class="[&_.p-inputgroup]:flex [&_.p-inputgroup]:gap-3 [&_.p-inputgroup]:justify-center"
+          >
             <p-inputGroupAddon class="w-32">
               <p>
                 <i class="pi pi-arrows-v"></i>
@@ -109,11 +183,19 @@
               </p>
             </p-inputGroupAddon>
             <div class="flex flex-col gap-2 lg:flex-row">
-              <input disabled class="w-full p-2 text-gray-500 disabled:bg-gray-100" pInputText placeholder="-" [(ngModel)]="editUser.height"/>
+              <input
+                disabled
+                class="w-full p-2 text-gray-500 disabled:bg-gray-100"
+                pInputText
+                placeholder="Altura"
+                [(ngModel)]="editUser.height"
+              />
             </div>
           </p-inputGroup>
 
-          <p-inputGroup class="[&_.p-inputgroup]:flex [&_.p-inputgroup]:gap-3 [&_.p-inputgroup]:justify-center">
+          <p-inputGroup
+            class="[&_.p-inputgroup]:flex [&_.p-inputgroup]:gap-3 [&_.p-inputgroup]:justify-center"
+          >
             <p-inputGroupAddon class="w-32">
               <p>
                 <i class="pi pi-ticket"></i>
@@ -121,10 +203,18 @@
               </p>
             </p-inputGroupAddon>
             <div class="flex flex-col gap-2 lg:flex-row">
-              <input disabled class="w-full p-2 text-gray-500 disabled:bg-gray-100" pInputText placeholder="-" [(ngModel)]="editUser.weight"/>
+              <input
+                type="number"
+                disabled
+                placeholder="Peso"
+                class="w-full p-2 text-gray-500 disabled:bg-gray-100"
+                [(ngModel)]="editUser.weight.value"
+              />
             </div>
           </p-inputGroup>
-          <p-inputGroup class="[&_.p-inputgroup]:flex [&_.p-inputgroup]:gap-3 [&_.p-inputgroup]:justify-center">
+          <p-inputGroup
+            class="[&_.p-inputgroup]:flex [&_.p-inputgroup]:gap-3 [&_.p-inputgroup]:justify-center"
+          >
             <p-inputGroupAddon class="w-32">
               <p>
                 <i class="pi pi-receipt"></i>
@@ -132,7 +222,13 @@
               </p>
             </p-inputGroupAddon>
             <div class="flex flex-col gap-2 lg:flex-row">
-              <input disabled class="w-full p-2 text-gray-500 disabled:bg-gray-100" pInputText placeholder="-" [(ngModel)]="editUser.age"/>
+              <input
+                disabled
+                class="w-full p-2 text-gray-500 disabled:bg-gray-100"
+                pInputText
+                placeholder="Idade"
+                [(ngModel)]="editUser.age"
+              />
             </div>
           </p-inputGroup>
         </div>
