fix: remove unnecessary opacity from profile component styles

--- a/src/app/features/profile/pages/profile/profile.component.html
+++ b/src/app/features/profile/pages/profile/profile.component.html
@@ -1,7 +1,7 @@
-<main class="flex items-center justify-center w-screen h-screen bg-center bg-cover bg-profile-bg bg-opacity-40">
-  <div class="w-full max-w-3xl p-6 bg-white rounded-lg shadow-lg opacity-90">
+<main class="flex items-center justify-center h-screen bg-center bg-cover bg-profile-bg ">
+  <div class="w-full max-w-3xl p-6 bg-white rounded-lg shadow-lg ">
     <app-title title="Perfil" />
-    <div class="flex flex-col w-full mt-6">
+    <div class="flex flex-col w-full mt-6" >
       <div
         class="flex flex-col items-center justify-between gap-4 pb-5 border-b border-zinc-200 lg:flex-row lg:items-center dark:border-zinc-700">
         <div class="space-y-1 text-center">
@@ -16,7 +16,7 @@
             label="Editar"
             icon="pi pi-pencil"
             (click)="showDialog()"
-            class="!text-white !bg-emerald-500 hover:!bg-emerald-600 !border-emerald-500 hover:!border-emerald-600 !opacity-100"
+            class="!text-white !bg-emerald-500 hover:!bg-emerald-600 !border-emerald-500 hover:!border-emerald-600"
           >
           </button>
 
