refactor: improve services and error handling

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import 'ngx-toastr/toastr';
 @import 'primeicons/primeicons.css';
 @import '../node_modules/tailwindcss/base.css' layer(tailwindcss);
 @import '../node_modules/tailwindcss/components.css' layer(tailwindcss);
@@ -6,7 +7,7 @@
 @import 'primeng/resources/primeng.css';
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,4 +15,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.custom-ngx-toastr {
+  box-shadow: none !important;
+  font-size: 0.875rem !important;
 }
