--- a/src/app/features/auth/components/auth-layout/auth-layout.component.html
+++ b/src/app/features/auth/components/auth-layout/auth-layout.component.html
@@ -1,7 +1,6 @@
 <main class="relative flex justify-center h-full">
-
   <section
-    class="relative z-10 flex items-center justify-center w-full p-6 lg:w-1/3 "
+    class="relative z-10 flex items-center justify-center w-full p-6 lg:w-1/3"
   >
     <div class="flex flex-col w-full max-w-sm space-y-6 text-center">
       <img
@@ -9,24 +8,16 @@
         alt="Logo da aplicação"
         class="w-32 mx-auto"
       />
-      <P class="text-5xl font-bold text-emerald-600 font-Orbitron">
-        UNIFIT
-      </P>
+      <P class="text-5xl font-bold text-emerald-600 font-Orbitron">UNIFIT</P>
 
       <router-outlet></router-outlet>
-
-      <p class="text-emerald-600">
-        By Carne Seca group
-      </p>
-
     </div>
   </section>
 
   <section class="absolute inset-0 bg-black">
     <img
-      src="/assets/12.jpeg"
-      alt="Banner de autenticação"
-      class="object-cover object-center w-full h-full opacity-40"
+      src="/assets/auth-banner.webp"
+      class="object-cover object-center w-full h-full opacity-10"
     />
   </section>
 </main>
