--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -23,7 +23,6 @@
         formControlName="email"
         placeholder="Email"
         class="p-inputtext-sm hover:!border-emerald-500 focus-within:!border-emerald-500"
-        [disabled]="isSubmitting"
       />
     </div>
 
@@ -36,7 +35,6 @@
         formControlName="password"
         placeholder="Senha"
         class="p-inputtext-sm hover:!border-emerald-500 focus-within:!border-emerald-500"
-        [disabled]="isSubmitting"
       />
     </div>
 
@@ -51,14 +49,7 @@
     ></button>
   </form>
 
-  <div class="flex flex-col gap-1">
-    <a
-      routerLink="/auth/reset-password"
-      class="mt-1 mr-2 text-sm font-medium underline text-slate-300 hover:text-slate-200"
-    >
-      Esqueceu sua senha?
-    </a>
-
+  <div class="flex flex-col">
     <p class="text-sm text-slate-300">
       Ainda não tem uma conta?
       <a
