--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -11,8 +11,8 @@
   <form
     [formGroup]="registerForm"
     class="flex flex-col gap-2"
+    (submit)="handleSubmit()"
     ngNativeValidate
-    (submit)="handleSubmit($event)"
   >
     <div class="flex flex-col gap-1">
       <input
@@ -23,7 +23,6 @@
         formControlName="email"
         placeholder="Email"
         class="p-inputtext-sm hover:!border-emerald-500 focus-within:!border-emerald-500"
-        [disabled]="isSubmitting"
       />
     </div>
 
@@ -36,7 +35,6 @@
         formControlName="password"
         placeholder="Senha"
         class="p-inputtext-sm hover:!border-emerald-500 focus-within:!border-emerald-500"
-        [disabled]="isSubmitting"
       />
     </div>
 
