--- a/src/app/shared/components/app-layout/app-layout.component.html
+++ b/src/app/shared/components/app-layout/app-layout.component.html
@@ -8,7 +8,7 @@
 
   <app-sidebar />
 
-  <main class="flex-1 w-full">
+  <main class="flex-1 w-full p-6">
     <router-outlet></router-outlet>
   </main>
 
