refactor(workouts): improve code logic and error handling

--- a/src/app/features/workouts/pages/workout-details/components/exercise/exercise.component.html
+++ b/src/app/features/workouts/pages/workout-details/components/exercise/exercise.component.html
@@ -1,6 +1,6 @@
 <main class="h-full">
   <div
-    class="flex flex-col justify-between h-full max-w-sm gap-4 p-4 px-6 overflow-hidden bg-white rounded-md shadow-sm"
+    class="flex flex-col justify-between h-full gap-4 p-4 px-6 overflow-hidden bg-white border rounded-md"
   >
     <div>
       <div class="mb-2 text-xl font-semibold truncate">
