--- a/src/app/features/workouts/pages/workout-details/workout-details.component.html
+++ b/src/app/features/workouts/pages/workout-details/workout-details.component.html
@@ -16,7 +16,7 @@
         iconPos="right"
         pTooltip="Editar Treino"
         tooltipPosition="bottom"
-        (click)="showEditDialog()"
+        (click)="showEditWorkoutDialog()"
       ></p-button>
       <p-button
         size="small"
@@ -25,7 +25,7 @@
         pTooltip="Deletar Treino"
         severity="danger"
         tooltipPosition="bottom"
-        (click)="showDeleteDialog()"
+        (click)="showDeleteWorkoutDialog()"
       ></p-button>
     </div>
   </div>
@@ -43,8 +43,7 @@
     [exercises]="exercises"
     (exerciseUpdated)="onExerciseUpdated($event)"
     (exerciseDeleted)="onExerciseDeleted($event)"
-    >" > >
-  </app-exercise-list>
+  ></app-exercise-list>
 
   <p-dialog
     header="Adicionar Exercício"
@@ -115,7 +114,7 @@
         severity="secondary"
         (click)="hideExerciseDialog()"
       ></p-button>
-      <p-button label="Adicionar" (click)="saveExercise()"></p-button>
+      <p-button label="Adicionar" (click)="handleSaveExercise()"></p-button>
     </div>
   </p-dialog>
 
@@ -173,9 +172,9 @@
       <p-button
         label="Cancelar"
         severity="secondary"
-        (click)="hideEditDialog()"
+        (click)="hideEditWorkoutDialog()"
       ></p-button>
-      <p-button label="Salvar" (click)="saveWorkout()"></p-button>
+      <p-button label="Salvar" (click)="handleSaveWorkout()"></p-button>
     </div>
   </p-dialog>
 
@@ -194,9 +193,9 @@
       <p-button
         label="Cancelar"
         severity="secondary"
-        (click)="hideDeleteDialog()"
+        (click)="hideDeleteWorkoutDialog()"
       ></p-button>
-      <p-button label="Deletar" (click)="deleteWorkout()"></p-button>
+      <p-button label="Deletar" (click)="handleDeleteWorkout()"></p-button>
     </div>
   </p-dialog>
 </main>
