--- a/src/app/features/workouts/pages/workouts/components/workout/workout.component.html
+++ b/src/app/features/workouts/pages/workouts/components/workout/workout.component.html
@@ -1,6 +1,6 @@
 <a [routerLink]="['/app/workouts', workout.id]">
   <div
-    class="flex flex-col justify-between h-full max-w-sm gap-4 p-4 px-6 overflow-hidden bg-white rounded-md shadow-sm"
+    class="flex flex-col justify-between h-full gap-4 p-4 px-6 overflow-hidden transition-colors duration-200 bg-white border rounded-md hover:bg-gray-50"
   >
     <div>
       <div class="mb-2 text-xl font-semibold truncate">
