--- a/src/app/features/workouts/pages/workouts/workouts.component.html
+++ b/src/app/features/workouts/pages/workouts/workouts.component.html
@@ -6,7 +6,7 @@
       size="small"
       icon="pi pi-plus"
       iconPos="right"
-      (click)="showDialog()"
+      (click)="showCreateWorkoutDialog()"
     >
     </p-button>
   </div>
@@ -32,7 +32,7 @@
           pInputText
           id="name"
           autocomplete="off"
-          [(ngModel)]="newWorkout.planName"
+          [(ngModel)]="newWorkoutForm.planName"
         />
       </div>
 
@@ -43,7 +43,7 @@
           id="description"
           pInputText
           autocomplete="off"
-          [(ngModel)]="newWorkout.planDescription"
+          [(ngModel)]="newWorkoutForm.planDescription"
         />
       </div>
 
@@ -53,7 +53,7 @@
           id="duration"
           mode="decimal"
           [min]="0"
-          [(ngModel)]="newWorkout.duration"
+          [(ngModel)]="newWorkoutForm.duration"
           autocomplete="off"
         />
       </div>
@@ -63,7 +63,7 @@
       <p-button
         label="Cancelar"
         severity="secondary"
-        (click)="hideDialog()"
+        (click)="hideCreateWorkoutDialog()"
       ></p-button>
       <p-button label="Adicionar" (click)="saveWorkout()"></p-button>
     </div>
