--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -43,6 +43,18 @@
           Perfil
         </a>
       </li>
+
+      <li *ngIf="isUserAdmin">
+        <a
+          (click)="handleLinkClick()"
+          routerLink="/app/admin/users"
+          routerLinkActive="!bg-gray-100"
+          class="flex items-center gap-4 px-4 py-2 text-sm transition-colors duration-200 border rounded-md cursor-pointer hover:bg-gray-50"
+        >
+          <i class="flex items-center justify-center text-lg pi pi-lock"></i>
+          Users
+        </a>
+      </li>
     </ul>
   </nav>
 
