--- a/src/app/features/admin/pages/users/users.component.html
+++ b/src/app/features/admin/pages/users/users.component.html
@@ -1,6 +1,9 @@
 <main class="flex flex-col h-full overflow-hidden">
-  <div class="flex flex-wrap items-center justify-between gap-2 mb-6">
+  <div class="flex flex-col gap-2 mb-4">
     <app-title title="Usuários" />
+    <app-subtitle
+      subtitle="Aqui você pode visualizar e excluir os usuários cadastrados no sistema"
+    />
   </div>
 
   <app-users-table class="flex-1 overflow-y-auto"></app-users-table>
