--- a/src/app/features/workouts/pages/workouts/workouts.component.html
+++ b/src/app/features/workouts/pages/workouts/workouts.component.html
@@ -1,6 +1,11 @@
 <main>
-  <div class="flex flex-wrap justify-between gap-2 mb-6">
-    <app-title title="Seus Treinos" />
+  <div class="flex flex-wrap justify-between gap-2 mb-4">
+    <div class="flex flex-col gap-2">
+      <app-title title="Seus Treinos" />
+      <app-subtitle
+        subtitle="Aqui você pode visualizar e adicionar novos treinos"
+      />
+    </div>
     <p-button
       label="Adicionar Treino"
       size="small"
