feat: resolved user permissions according to roles

--- a/src/app/features/admin/pages/users/components/users-table/users-table.component.html
+++ b/src/app/features/admin/pages/users/components/users-table/users-table.component.html
@@ -52,11 +52,15 @@
           <span
             class="inline-flex px-2 text-xs font-semibold leading-5 rounded-full"
             [ngClass]="{
-              'bg-green-100 text-green-800': user.role === 'ADMIN',
-              'bg-blue-100 text-blue-800': user.role === 'USER',
+              'bg-green-100 text-green-800': user.roles.includes(
+                UserRole.Admin
+              ),
+              'bg-blue-100 text-blue-800': user.roles.includes(
+                UserRole.Colaborador
+              ),
             }"
           >
-            {{ getRoleDisplay(user.role) }}
+            {{ getRoleDisplay(user.roles) }}
           </span>
         </td>
         <td class="px-6 py-4 text-sm font-medium whitespace-nowrap">
