--- a/src/app/features/profile/pages/profile/profile.component.html
+++ b/src/app/features/profile/pages/profile/profile.component.html
@@ -69,7 +69,7 @@
                   type="number"
                   id="weight"
                   autocomplete="off"
-                  [(ngModel)]="editUser.weight.value"
+                  [(ngModel)]="editUser.weight"
                   class="p-2 border-b-2 border-gray-300 focus:outline-none focus:border-emerald-500"
                 />
               </div>
@@ -189,7 +189,7 @@
                 disabled
                 placeholder="Peso"
                 class="w-full p-2 text-gray-500 disabled:bg-gray-100"
-                [(ngModel)]="user.weight.value"
+                [(ngModel)]="user.weight"
               />
             </div>
           </p-inputGroup>
